--- a/v1/production/index.html
+++ b/v1/production/index.html
@@ -12,14 +12,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700"
       type="text/css">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.6/css/all.css">
-      <!--<link rel="stylesheet" href="assets/css/fontawesome.css">  -->
+      <!--<link rel="stylesheet" href="assets/html/fontawesome.html">  -->
       <link rel="stylesheet" href="assets/css/bootstrap.min.css">
       <link rel="stylesheet" href="assets/css/animate.css">
       <link rel="stylesheet" href="assets/css/style.css">
       <link rel="stylesheet" href="assets/css/media-queries.css">
       <link rel="stylesheet" href="assets/css/jquery.ui.css">
       <link rel="stylesheet" href="assets/css/contact.css">
-      <!-- <link rel="stylesheet" href="assets/css/default.css">     -->
+      <!-- <link rel="stylesheet" href="assets/html/default.html">     -->
       <!-- Favicon and touch icons -->
       <link rel="shortcut icon" href="assets/ico/favicon.ico">
       <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-icon-precomposed.png">
