Added a new contact form to the website to see how getform.io works and how to properly utilize it.

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ href="#top-content">Download now</a> </div>
 <div class="row">
 <div class="col-lg-8 col-lg-offset-2">
 <h1> Contact Us | Equity Publishing </h1>
-<p class="lead"> This is a contact page for Equity Publishing </p>
+<!-- <p class="lead"> This is a contact page for Equity Publishing </p>
 <form id="contact-form" action="assets/php/contact.php" role="form">
   <div class="messages"> </div>
   <div class="controls">
@@ -323,6 +323,26 @@ required.</p>
 </div>
 </div>
 </div>
+-->
+<form action="https://getform.io/f/943f6c9d-5e92-46c5-a4b1-538e404e102c" method="POST">
+  <input type="text" name="name">
+  <input type="email" name="email">
+  <input type="text" name="message">
+  <!-- checkbox handle -->
+  <input type="checkbox" name="subscribe" value="yes" checked>
+  <input type="hidden" name="subscribe" value="no">
+  <!-- radio button handle -->
+  <input type="radio" name="gender" value="male" checked>
+  <input type="radio" name="gender" value="female">
+  <input type="radio" name="gender" value="other">
+  <!-- select field handle -->
+  <select name="work-experience">
+    <option value="one-year">0-1 years</option>
+    <option value="one-five-years">1-5 years</option>
+    <option value="five-plus-years">5+ years</option>
+  </select>
+  <button type="submit">Send</button>
+</form>
 <!-- Testimonials -->
 <div class="testimonials-container section-container section-container-image-bg">
 <div class="container">
